--- a/PS5_Display_Pics/PS5_White_genshin.css
+++ b/PS5_Display_Pics/PS5_White_genshin.css
@@ -74,7 +74,7 @@
 }
 
 .ds4 .touchpad.pressed {
-    background: url(Touchpad.png) no-repeat center;
+    background: url(Touchpad_genshin.png) no-repeat center;
 }
 
 .ds4 .meta {
